# ralculator

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: clippy.yml  test.yml
src/: cli.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  mod.rs  parser.rs  repl.rs  test.rs  tokens.rs
src/errors/: interpreter_error.rs  lexer_error.rs  mod.rs  parser_error.rs
src/expression/: interpreter.rs  lexer.rs  parser.rs
src/expressions/: interpreter.rs  lexer.rs  parser.rs
src/interface/: cli.rs  mod.rs  repl.rs
src/logic/: lexer.rs  parser.rs
tests/: interpreter.rs  lexer.rs  parser.rs
