[package]
name = "ralculator"
version = "0.1.0"
description = "A simple Rust mathematical expression calculator lol"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
clap = { version = "4.5.1", features = ["derive"] }
